--- a/editor/static/css/editor.css
+++ b/editor/static/css/editor.css
@@ -138,6 +138,10 @@ a[draggable=true] {
     width: 420px;
 }
 
+.small.left {
+    text-align: left;
+}
+
 input[type="checkbox"] {
     width: 16px;
 }
