--- a/editor/templates/log.html
+++ b/editor/templates/log.html
@@ -1,13 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Log</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="shortcut icon" href="/editor/static/favicon.ico">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
+    <link rel="shortcut icon" href="/editor/static/images/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="/editor/static/editor-all.css">
-    <link rel="stylesheet" type="text/css" href="/editor/static/editor-other.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
 
-    <script src="/editor/static/jquery-1.5.js"></script>
+    <script src="/editor/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
     <div id="topbar">
@@ -47,8 +47,8 @@
         </div>
     </div>
 
-    <script src="/editor/static/editor-resize.js"></script>
-    <script src="/editor/static/editor-other.js"></script>
+    <script src="/editor/static/js/editor-resize.js"></script>
+    <script src="/editor/static/js/editor-other.js"></script>
     <script type="text/javascript">
         $(document).ready(function (){
             adjustGeometry();
