--- a/editor/templates/reauth.html
+++ b/editor/templates/reauth.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Reauthentication</title>
-<link rel="stylesheet" type="text/css" href="/editor/static/style.css">
+<link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
+<link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
 
 <div class=page>
   <div class=metanav>
