--- a/public/templates/album.html
+++ b/public/templates/album.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<!-- 24 Feb 2012 dsmall -->
-<!-- Requires: jquery, rascal-1.02, album.css, album.js, static/pictures folder, server.py support -->
+<!-- 24 Feb 2012, 12 May 2012 dsmall -->
+<!-- Requires: jquery, rascal-1.03, album.css, album.js, static/pictures folder, server.py support -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>Rascal Album</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans%7CMolengo">
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="stylesheet" type="text/css" href="/static/album.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/album.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
-    <script src="/static/rascal-1.02.js"></script>
+    <script src="/static/js/jquery-1.7.2.js"></script>
+    <script src="/static/js/rascal-1.03.js"></script>
 </head>
 <body>
     <div id="rascalcontent" class="rascalcontent">
@@ -28,7 +27,7 @@
         <div id="status"></div>
     </div>
     
-    <script src="/static/album.js"></script>
+    <script src="/static/js/album.js"></script>
     
     <script type="text/javascript">
         /* Initialise Rascal library */
