--- a/public/templates/upload-cf.html
+++ b/public/templates/upload-cf.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!-- 27 Feb 2011 dsmall rascal-1.02.js -->
+<!-- 12 May 2012 dsmall rascal-1.03.js -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>File Upload - Choose File</title>
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="stylesheet" type="text/css" href="/static/rascal-demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/rascal-demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
-    <script src="/static/rascal-1.02.js"></script>
+    <script src="/static/js/jquery-1.7.2.js"></script>
+    <script src="/static/js/rascal-1.03.js"></script>
     <style>
         /* Hide real file input button behind fake button */
         #fileinput {
@@ -51,7 +51,7 @@
         <input id="clear" type="button" value="Clear Files" class="medium blue awesome" />
     </div>
     
-    <script src="/static/rascal-demo.js"></script>
+    <script src="/static/js/rascal-demo.js"></script>
     
     <script type="text/javascript">
                 
