--- a/editor/templates/auth.html
+++ b/editor/templates/auth.html
@@ -1,12 +1,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Log in</title>
-    <link rel="shortcut icon" href="/editor/static/favicon.ico">
+    <link rel="shortcut icon" href="/editor/static/images/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
 
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="/editor/static/remove/style.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
+
+    <script src="/editor/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
     <div id="topbar">
