--- a/editor/templates/editor-a.html
+++ b/editor/templates/editor-a.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Editor</title>
-    <link rel="shortcut icon" href="/editor/static/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
+    <link rel="shortcut icon" href="/editor/static/images/favicon.ico">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
 
     <script src="/editor/static/ace/build/src/ace-noconflict.js" type="text/javascript" charset="utf-8"></script>
     <script src="/editor/static/ace/build/src/theme-textmate-noconflict.js" type="text/javascript" charset="utf-8"></script>
@@ -15,13 +15,13 @@
     <script src="/editor/static/ace/build/src/mode-text-noconflict.js" type="text/javascript" charset="utf-8"></script>
     <script src="/editor/static/ace/build/src/mode-xml-noconflict.js" type="text/javascript" charset="utf-8"></script>
     
-    <link rel="stylesheet" type="text/css" href="/editor/static/jquery.filetree.css">
-    <link rel="stylesheet" type="text/css" href="/editor/static/editor-all.css">
-    <link rel="stylesheet" type="text/css" href="/editor/static/editor.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/jquery.filetree.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/css/editor.css">
 
-    <script src="/editor/static/jquery-1.5.js"></script>
-    <script src="/editor/static/jquery.filetree.js"></script>
-    <script src="/editor/static/rascal-1.02.js"></script>
+    <script src="/editor/static/js/jquery-1.7.2.js"></script>
+    <script src="/editor/static/js/jquery.filetree.js"></script>
+    <script src="/editor/static/js/rascal-1.03.js"></script>
     
     <style>
         #ace-editor {
@@ -97,7 +97,7 @@
     <div id="overlay-f" class="overlay">OVERLAY FOLDER
         <div id="new-folder-dialog" class="dialog">
             Create a new folder in "static"<br />
-            <div id="folder-message" class="small">You will be able to drag it to another folder</div>
+            <div id="folder-message" class="small">You will be able to drag it to another folder.</div>
             <fieldset>
                 <input id="folder-name" type="text" name="folder-name" /><br />
                 <input id="create-folder" type="button" value="Create" class="large red awesome" alt="Create" />
@@ -107,15 +107,13 @@
     </div>
     <div id="overlay-p" class="overlay">OVERLAY PREFERENCES
         <div id="prefs-dialog" class="dialog">
-            Ace Preferences<br />
+            CodeMirror Preferences<br />
             <div id="folder-message" class="small">&nbsp;</div>
             <fieldset class="medium" style="text-align: left;">
                 <input id="warn-save" type="checkbox" name="warn-delete" />Warn if changes not saved<br />
                 <input id="warn-delete" type="checkbox" name="warn-delete" />Warn before deleting<br />
                 <input id="lineWrapping" type="checkbox" name="lineWrapping" />Wrap lines<br />
                 <input id="lineNumbers" type="checkbox" name="lineNumbers" />Show line numbers<br />
-                <input id="highlightSelectedWord" type="checkbox" name="highlightSelectedWord" />Highlight selected word<br />
-                <input id="printMargin" type="checkbox" name="printMargin" />Show print margin<br />
             </fieldset>
             <input id="cancel-prefs" type="button" value="OK" class="large red awesome" alt="Cancel" />
         </div>
@@ -125,26 +123,36 @@
             Save file<br />
             <div id="save-file-message" class="small">&nbsp;</div>
             <fieldset>
-                <input id="save-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
                 <input id="save-no" type="button" value="Don't Save" class="large blue awesome" alt="Don't Save" />
-                <input id="save-yes" type="button" value="Save..." class="large red awesome" alt="Save" />
+                <input id="save-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
+                <input id="save-yes" type="button" value="Save" class="large red awesome" alt="Save" />
             </fieldset>
         </div>
     </div>
-    <div id="overlay-d" class="overlay">OVERLAY DELETE
+     <div id="overlay-r" class="overlay">OVERLAY REVERT
+        <div id="save-file-dialog" class="dialog">
+            Revert file<br />
+            <div id="revert-file-message" class="small">&nbsp;</div>
+            <fieldset>
+                <input id="revert-yes" type="button" value="Revert" class="large red awesome" alt="Revert" />
+                <input id="revert-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
+            </fieldset>
+        </div>
+    </div>
+   <div id="overlay-d" class="overlay">OVERLAY DELETE
         <div id="delete-file-dialog" class="dialog">
             Delete file or folder<br />
             <div id="delete-file-message" class="small">&nbsp;</div>
             <fieldset>
+                <input id="delete-yes" type="button" value="Delete" class="large red awesome" alt="Delete" />
                 <input id="delete-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
-                <input id="delete-yes" type="button" value="Delete..." class="large red awesome" alt="Delete" />
             </fieldset>
         </div>
     </div>
 
-    <script src="/editor/static/editor-resize.js"></script>
-    <script src="/editor/static/editor-a.js"></script>
-    <script src="/editor/static/editor.js"></script>
+    <script src="/editor/static/js/editor-resize.js"></script>
+    <script src="/editor/static/js/editor-a.js"></script>
+    <script src="/editor/static/js/editor.js"></script>
     <script type="text/javascript">
     
         var delay = (function () {
