--- a/public/templates/browser-test.html
+++ b/public/templates/browser-test.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
+<!-- 12 May 2012 dsmall -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>Browser Test</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
-    <script src="/static/modernizr-2.5.3.js"></script>
+    <script src="/static/js/jquery-1.7.2.js"></script>
+    <script src="/static/js/modernizr-2.5.3.js"></script>
     <style>
         body {
             margin: 0.5em;
