--- a/public/templates/email.html
+++ b/public/templates/email.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!-- 8 Apr 2012 dsmall Added Sending... -->
+<!-- 12 May 2012 dsmall New static folders -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>Send an email</title>
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="stylesheet" type="text/css" href="/static/email.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/email.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
+    <script src="/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
     <div class="rascalcontent">
