--- a/public/templates/fonts.html
+++ b/public/templates/fonts.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!-- 12 May 2012 dsmall -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>Rascal Font Book</title>
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
     <style>
         #molengo { font-family: "Molengo",sans-serif; }
