--- a/public/templates/hello.html
+++ b/public/templates/hello.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
+<!-- 12 May 2012 dsmall but needs to tested on Rascal -->
 <html>
 <head>
     <meta charset="utf-8">
     <title>Hello World</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
-    <!--[if IE]><script language="javascript" type="text/javascript" src="/excanvas.js"></script><![endif]-->
-    <script language="javascript" type="text/javascript" src="/static/jquery.jqplot.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/jquery.jqplot.css" />
+    <script src="/static/js/jquery-1.7.2.js"></script>
     <style>
         body {
             margin: 0.5em;
