--- a/public/templates/hello.html
+++ b/public/templates/hello.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
+    <script src="/static/js/jquery-1.7.2.js"></script>
     <style>
         body {
             margin: 0.5em;
