Fix __init__.py, update scope.html

--- a/public/templates/scope.html
+++ b/public/templates/scope.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
     <script src="/static/js/jquery-1.7.2.js"></script>
-    <script language="javascript" type="text/javascript" src="/static/jquery.jqplot.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/jquery.jqplot.css" />
+    <script language="javascript" type="text/javascript" src="/static/js/jquery.jqplot-1.0.0b2.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/jquery.jqplot-1.0.0b2.css" />
 </head>
 <body>
     <div class="rascalcontent">
