Changes to scope

--- a/public/templates/scope.html
+++ b/public/templates/scope.html
@@ -38,7 +38,9 @@
             yaxis: {
                 label: "Sensor voltage [V]",
                 min: 0,
-                max: 2.5 },
+                max: 2.5,
+                tickoptions: {
+                    formatString: '%d' } },
         },
         seriesColors: [ "#cd2820" ]
     };
