Fix filetree icons, move public/favicon.ico and fix up links in various templates

--- a/editor/templates/config.html
+++ b/editor/templates/config.html
@@ -2,7 +2,7 @@
 <head>
     <title>Config</title>
     <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
-    <link rel="shortcut icon" href="/editor/static/favicon.ico">
+    <link rel="shortcut icon" href="/editor/static/images/favicon.ico">
     
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-all.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/css/editor-other.css">
