--- a/public/templates/test-pins.html
+++ b/public/templates/test-pins.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Test pins</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="http://code.jquery.com/jquery-1.7.2rc1.js"></script>
 </head>
 <body>
