--- a/editor/static/css/jquery.filetree.css
+++ b/editor/static/css/jquery.filetree.css
@@ -64,66 +64,66 @@ ul.jqueryFileTree img.selected:hover {
 
 
 /* Core Styles */
-.jqueryFileTree LI.directory { background: url(file-icons/directory.png) left top no-repeat; }
-.jqueryFileTree LI.expanded { background: url(file-icons/folder_open.png) left top no-repeat; }
-.jqueryFileTree LI.file { background: url(file-icons/file.png) left top no-repeat; }
-.jqueryFileTree LI.wait { background: url(file-icons/spinner.gif) left top no-repeat; }
+.jqueryFileTree LI.directory { background: url(/editor/static/images/file-icons/directory.png) left top no-repeat; }
+.jqueryFileTree LI.expanded { background: url(/editor/static/images/file-icons/folder_open.png) left top no-repeat; }
+.jqueryFileTree LI.file { background: url(/editor/static/images/file-icons/file.png) left top no-repeat; }
+.jqueryFileTree LI.wait { background: url(/editor/static/images/file-icons/spinner.gif) left top no-repeat; }
 /* File Extensions*/
-.jqueryFileTree LI.ext_3gp { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_afp { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_afpa { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_asp { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_aspx { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_avi { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_bat { background: url(file-icons/application.png) left top no-repeat; }
-.jqueryFileTree LI.ext_bmp { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_c { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_cfm { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_cgi { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_com { background: url(file-icons/application.png) left top no-repeat; }
-.jqueryFileTree LI.ext_cpp { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_css { background: url(file-icons/css.png) left top no-repeat; }
-.jqueryFileTree LI.ext_doc { background: url(file-icons/doc.png) left top no-repeat; }
-.jqueryFileTree LI.ext_exe { background: url(file-icons/application.png) left top no-repeat; }
-.jqueryFileTree LI.ext_gif { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_fla { background: url(file-icons/flash.png) left top no-repeat; }
-.jqueryFileTree LI.ext_h { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_htm { background: url(file-icons/html.png) left top no-repeat; }
-.jqueryFileTree LI.ext_html { background: url(file-icons/html.png) left top no-repeat; }
-.jqueryFileTree LI.ext_jar { background: url(file-icons/java.png) left top no-repeat; }
-.jqueryFileTree LI.ext_jpg { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_jpeg { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_js { background: url(file-icons/script.png) left top no-repeat; }
-.jqueryFileTree LI.ext_lasso { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_log { background: url(file-icons/txt.png) left top no-repeat; }
-.jqueryFileTree LI.ext_m4p { background: url(file-icons/music.png) left top no-repeat; }
-.jqueryFileTree LI.ext_mov { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_mp3 { background: url(file-icons/music.png) left top no-repeat; }
-.jqueryFileTree LI.ext_mp4 { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_mpg { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_mpeg { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_ogg { background: url(file-icons/music.png) left top no-repeat; }
-.jqueryFileTree LI.ext_pcx { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_pdf { background: url(file-icons/pdf.png) left top no-repeat; }
-.jqueryFileTree LI.ext_php { background: url(file-icons/php.png) left top no-repeat; }
-.jqueryFileTree LI.ext_png { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_ppt { background: url(file-icons/ppt.png) left top no-repeat; }
-.jqueryFileTree LI.ext_psd { background: url(file-icons/psd.png) left top no-repeat; }
-.jqueryFileTree LI.ext_pl { background: url(file-icons/script.png) left top no-repeat; }
-.jqueryFileTree LI.ext_py { background: url(file-icons/script.png) left top no-repeat; }
-.jqueryFileTree LI.ext_rb { background: url(file-icons/ruby.png) left top no-repeat; }
-.jqueryFileTree LI.ext_rbx { background: url(file-icons/ruby.png) left top no-repeat; }
-.jqueryFileTree LI.ext_rhtml { background: url(file-icons/ruby.png) left top no-repeat; }
-.jqueryFileTree LI.ext_rpm { background: url(file-icons/linux.png) left top no-repeat; }
-.jqueryFileTree LI.ext_ruby { background: url(file-icons/ruby.png) left top no-repeat; }
-.jqueryFileTree LI.ext_sql { background: url(file-icons/db.png) left top no-repeat; }
-.jqueryFileTree LI.ext_swf { background: url(file-icons/flash.png) left top no-repeat; }
-.jqueryFileTree LI.ext_tif { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_tiff { background: url(file-icons/picture.png) left top no-repeat; }
-.jqueryFileTree LI.ext_txt { background: url(file-icons/txt.png) left top no-repeat; }
-.jqueryFileTree LI.ext_vb { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_wav { background: url(file-icons/music.png) left top no-repeat; }
-.jqueryFileTree LI.ext_wmv { background: url(file-icons/film.png) left top no-repeat; }
-.jqueryFileTree LI.ext_xls { background: url(file-icons/xls.png) left top no-repeat; }
-.jqueryFileTree LI.ext_xml { background: url(file-icons/code.png) left top no-repeat; }
-.jqueryFileTree LI.ext_zip { background: url(file-icons/zip.png) left top no-repeat; }
+.jqueryFileTree LI.ext_3gp { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_afp { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_afpa { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_asp { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_aspx { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_avi { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_bat { background: url(/editor/static/images/file-icons/application.png) left top no-repeat; }
+.jqueryFileTree LI.ext_bmp { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_c { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_cfm { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_cgi { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_com { background: url(/editor/static/images/file-icons/application.png) left top no-repeat; }
+.jqueryFileTree LI.ext_cpp { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_css { background: url(/editor/static/images/file-icons/css.png) left top no-repeat; }
+.jqueryFileTree LI.ext_doc { background: url(/editor/static/images/file-icons/doc.png) left top no-repeat; }
+.jqueryFileTree LI.ext_exe { background: url(/editor/static/images/file-icons/application.png) left top no-repeat; }
+.jqueryFileTree LI.ext_gif { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_fla { background: url(/editor/static/images/file-icons/flash.png) left top no-repeat; }
+.jqueryFileTree LI.ext_h { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_htm { background: url(/editor/static/images/file-icons/html.png) left top no-repeat; }
+.jqueryFileTree LI.ext_html { background: url(/editor/static/images/file-icons/html.png) left top no-repeat; }
+.jqueryFileTree LI.ext_jar { background: url(/editor/static/images/file-icons/java.png) left top no-repeat; }
+.jqueryFileTree LI.ext_jpg { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_jpeg { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_js { background: url(/editor/static/images/file-icons/script.png) left top no-repeat; }
+.jqueryFileTree LI.ext_lasso { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_log { background: url(/editor/static/images/file-icons/txt.png) left top no-repeat; }
+.jqueryFileTree LI.ext_m4p { background: url(/editor/static/images/file-icons/music.png) left top no-repeat; }
+.jqueryFileTree LI.ext_mov { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_mp3 { background: url(/editor/static/images/file-icons/music.png) left top no-repeat; }
+.jqueryFileTree LI.ext_mp4 { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_mpg { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_mpeg { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_ogg { background: url(/editor/static/images/file-icons/music.png) left top no-repeat; }
+.jqueryFileTree LI.ext_pcx { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_pdf { background: url(/editor/static/images/file-icons/pdf.png) left top no-repeat; }
+.jqueryFileTree LI.ext_php { background: url(/editor/static/images/file-icons/php.png) left top no-repeat; }
+.jqueryFileTree LI.ext_png { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_ppt { background: url(/editor/static/images/file-icons/ppt.png) left top no-repeat; }
+.jqueryFileTree LI.ext_psd { background: url(/editor/static/images/file-icons/psd.png) left top no-repeat; }
+.jqueryFileTree LI.ext_pl { background: url(/editor/static/images/file-icons/script.png) left top no-repeat; }
+.jqueryFileTree LI.ext_py { background: url(/editor/static/images/file-icons/script.png) left top no-repeat; }
+.jqueryFileTree LI.ext_rb { background: url(/editor/static/images/file-icons/ruby.png) left top no-repeat; }
+.jqueryFileTree LI.ext_rbx { background: url(/editor/static/images/file-icons/ruby.png) left top no-repeat; }
+.jqueryFileTree LI.ext_rhtml { background: url(/editor/static/images/file-icons/ruby.png) left top no-repeat; }
+.jqueryFileTree LI.ext_rpm { background: url(/editor/static/images/file-icons/linux.png) left top no-repeat; }
+.jqueryFileTree LI.ext_ruby { background: url(/editor/static/images/file-icons/ruby.png) left top no-repeat; }
+.jqueryFileTree LI.ext_sql { background: url(/editor/static/images/file-icons/db.png) left top no-repeat; }
+.jqueryFileTree LI.ext_swf { background: url(/editor/static/images/file-icons/flash.png) left top no-repeat; }
+.jqueryFileTree LI.ext_tif { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_tiff { background: url(/editor/static/images/file-icons/picture.png) left top no-repeat; }
+.jqueryFileTree LI.ext_txt { background: url(/editor/static/images/file-icons/txt.png) left top no-repeat; }
+.jqueryFileTree LI.ext_vb { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_wav { background: url(/editor/static/images/file-icons/music.png) left top no-repeat; }
+.jqueryFileTree LI.ext_wmv { background: url(/editor/static/images/file-icons/film.png) left top no-repeat; }
+.jqueryFileTree LI.ext_xls { background: url(/editor/static/images/file-icons/xls.png) left top no-repeat; }
+.jqueryFileTree LI.ext_xml { background: url(/editor/static/images/file-icons/code.png) left top no-repeat; }
+.jqueryFileTree LI.ext_zip { background: url(/editor/static/images/file-icons/zip.png) left top no-repeat; }
