--- a/public/templates/browser-test.html
+++ b/public/templates/browser-test.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Browser Test</title>
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/jquery-1.7.2.js"></script>
     <script src="/static/js/modernizr-2.5.3.js"></script>
     <style>
