--- a/public/templates/email.html
+++ b/public/templates/email.html
@@ -7,7 +7,7 @@
     <title>Send an email</title>
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="stylesheet" type="text/css" href="/static/css/email.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
