--- a/public/templates/fonts.html
+++ b/public/templates/fonts.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Rascal Font Book</title>
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <style>
         #molengo { font-family: "Molengo",sans-serif; }
         #urw { font-family: "URW Gothic L",sans-serif; }
