--- a/public/templates/hello.html
+++ b/public/templates/hello.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Hello World</title>
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/jquery-1.7.2.js"></script>
     <style>
         body {
