--- a/public/templates/lcd.html
+++ b/public/templates/lcd.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>LCD demo</title>
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="/static/jquery-1.5.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <script src="/static/js/jquery-1.7.2.js"></script>
 </head>
 <body>
     <div class="rascalcontent">
