--- a/public/templates/motor.html
+++ b/public/templates/motor.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <!--[if IE]><script language="javascript" type="text/javascript" src="/excanvas.js"></script><![endif]-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
