--- a/public/templates/upload-cf.html
+++ b/public/templates/upload-cf.html
@@ -6,7 +6,7 @@
     <title>File Upload - Choose File</title>
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
     <link rel="stylesheet" type="text/css" href="/static/css/rascal-demo.css">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <script src="/static/js/jquery-1.7.2.js"></script>
     <script src="/static/js/rascal-1.03.js"></script>
     <style>
