Now synced with master

--- a/public/templates/scope.html
+++ b/public/templates/scope.html
@@ -39,8 +39,11 @@
                 label: "Sensor voltage [V]",
                 min: 0,
                 max: 2.5,
-                tickoptions: {
-                    formatString: '%d' } },
+                numberTicks: 6,
+//                tickOptions: {
+//                    formatString: '%.1f'
+//                }
+            },
         },
         seriesColors: [ "#cd2820" ]
     };
