Fix y axis of analog-graph demo

--- a/public/templates/analog-graph.html
+++ b/public/templates/analog-graph.html
@@ -34,7 +34,8 @@
             yaxis: {
                 label: "Sensor voltage [V]",
                 min: 0,
-                max: 2.5 },
+                max: 2.5,
+                numberTicks: 6 },
         },
         seriesColors: [ "#cd2820" ]
     };
