--- a/editor/static/css/editor-bs.css
+++ b/editor/static/css/editor-bs.css
@@ -7,11 +7,15 @@
 
 #save {
     width: 120px;
+    font-family: 'Lucida Grande';
+    font-size: 16px;
 }
 
 #reload {
     float: right;
     width: 160px;
+    font-family: 'Lucida Grande';
+    font-size: 16px;
 }
 
 .progress-bars {
@@ -57,6 +61,10 @@
 .well.rascal {
     padding: 3px;
     margin-bottom: 5px;
+    border: 3px solid #424242;
+    -moz-box-shadow: 0 0 3px #3A3A3A;
+    -webkit-box-shadow: 0 0 3px #3A3A3A;
+    box-shadow: 0 0 3px #3A3A3A;
 }
 
 #filetree {
@@ -84,6 +92,7 @@ a[draggable=true] {
 
 /* editor */
 #location-bar {
+    padding-left: 8px;
 }
 
 #location-bar a {
@@ -104,10 +113,10 @@ a[draggable=true] {
 .frame {
     position: absolute;
     visibility: hidden;
-    top: 0;
-    left: 0;
-    background-color: #818283;
-    border: 4px solid #414243;
+    top: 3px;
+    left: 3px;
+    background-color: #828282;
+    border: 3px solid #424242; 
     -moz-box-shadow: 0 0 22px #111;
     -webkit-box-shadow: 0 0 22px #111;
     box-shadow: 0 0 22px #111;
